src/app/posts/[...slug]/styles/md.css
.md {
  color: var(--text-1);
  margin: 0;
  margin-top: 16px;
  word-break: break-word;
  border-top: 1px dashed var(--divider);

  li {
    &::marker {
      color: var(--c-indigo-1);
    }
  }

  &>p {
    line-height: 28px;
  }

  &>div {
    overflow-x: hidden;
    margin: 16px 0;
  }

  h2 {
    margin-top: 1.5em;
  }

  /* table */
  table {
    display: block;
    overflow-x: auto;
    border-spacing: 0;
    table-layout: fixed;
    white-space: nowrap;
    margin: 20px 0;

    thead {
      border-bottom: 1px solid var(--divider);
    }

    tbody {
      font-size: 14px;
    }

    th {
      text-align: left;
      font-weight: 600;
    }

    th,
    td {
      padding: 10px 14px;
      border-bottom: 1px solid var(--divider);

      &:first-child {
        padding-left: 0;
      }

      &:last-child {
        padding-right: 0;
      }

      &:has(> a) {
        cursor: pointer;
      }
    }

    tr:last-child>td {
      border-bottom: none;
    }
  }

  /* Code */
  code {
    font-size: var(--text-sm);
    font-weight: 500;
    padding: 2px 4px;
    border-radius: 4px;
    color: var(--c-indigo-1);
    background-color: var(--c-indigo-soft);

    &>details {
      --size: 16px;
      cursor: pointer;
      margin: 4px 0;
      background-color: var(--bg-md-collapse);
      margin-left: -16px;
      padding-left: 16px;

      &[open] {
        padding-bottom: 8px;

        &>span:first-of-type {
          margin-top: 8px;
        }

        &>summary .code-extend-line {
          &::before {
            mask-image: url("data:image/svg+xml,%3Csvg%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%20viewBox%3D'0%200%2016%2016'%3E%3Cpath%20d%3D'M10.896%202H8.75V.75a.75.75%200%200%200-1.5%200V2H5.104a.25.25%200%200%200-.177.427l2.896%202.896a.25.25%200%200%200%20.354%200l2.896-2.896A.25.25%200%200%200%2010.896%202ZM8.75%2015.25a.75.75%200%200%201-1.5%200V14H5.104a.25.25%200%200%201-.177-.427l2.896-2.896a.25.25%200%200%201%20.354%200l2.896%202.896a.25.25%200%200%201-.177.427H8.75v1.25Zm-6.5-6.5a.75.75%200%200%200%200-1.5h-.5a.75.75%200%200%200%200%201.5h.5ZM6%208a.75.75%200%200%201-.75.75h-.5a.75.75%200%200%201%200-1.5h.5A.75.75%200%200%201%206%208Zm2.25.75a.75.75%200%200%200%200-1.5h-.5a.75.75%200%200%200%200%201.5h.5ZM12%208a.75.75%200%200%201-.75.75h-.5a.75.75%200%200%201%200-1.5h.5A.75.75%200%200%201%2012%208Zm2.25.75a.75.75%200%200%200%200-1.5h-.5a.75.75%200%200%200%200%201.5h.5Z'%2F%3E%3C%2Fsvg%3E");
          }
        }


        & .code-extend-text {
          visibility: hidden;
        }
      }

      &>summary {
        background-color: var(--bg-md-collapse);
        padding: 10px 0;
        margin-left: -16px;
        padding-left: 16px;

        &::marker {
          content: '';
        }

        & .code-extend-line {
          position: relative;
          display: inline-block;

          &::before {
            content: '';
            position: absolute;
            width: var(--size);
            height: var(--size);
            background-color: var(--c-md-alert-note);
            top: 50%;
            left: -4px;
            transform: translateY(-50%);
            mask-image: url("data:image/svg+xml,%3Csvg%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%20viewBox%3D'0%200%2016%2016'%3E%3Cpath%20d%3D'm8.177.677%202.896%202.896a.25.25%200%200%201-.177.427H8.75v1.25a.75.75%200%200%201-1.5%200V4H5.104a.25.25%200%200%201-.177-.427L7.823.677a.25.25%200%200%201%20.354%200ZM7.25%2010.75a.75.75%200%200%201%201.5%200V12h2.146a.25.25%200%200%201%20.177.427l-2.896%202.896a.25.25%200%200%201-.354%200l-2.896-2.896A.25.25%200%200%201%205.104%2012H7.25v-1.25Zm-5-2a.75.75%200%200%200%200-1.5h-.5a.75.75%200%200%200%200%201.5h.5ZM6%208a.75.75%200%200%201-.75.75h-.5a.75.75%200%200%201%200-1.5h.5A.75.75%200%200%201%206%208Zm2.25.75a.75.75%200%200%200%200-1.5h-.5a.75.75%200%200%200%200%201.5h.5ZM12%208a.75.75%200%200%201-.75.75h-.5a.75.75%200%200%201%200-1.5h.5A.75.75%200%200%201%2012%208Zm2.25.75a.75.75%200%200%200%200-1.5h-.5a.75.75%200%200%200%200%201.5h.5Z'%2F%3E%3C%2Fsvg%3E");
          }
        }

        & .code-extend-text {
          margin-left: 24px;
        }
      }
    }
  }

  pre {
    margin: 0;
    color: var(--text-1);
    overflow: auto;
    tab-size: 2;
    line-height: 1.6;
    height: 100%;
    max-height: 60vh;
    border-radius: var(--pre-radius);
    background-color: var(--bg-md-pre);
    padding: var(--pre-padding) 0 var(--pre-padding) var(--pre-padding);

    code {
      display: block;
      font-weight: 400;
      padding: 0;
      color: inherit;
      background-color: transparent;
    }
  }

  /* blockquote */
  blockquote {
    position: relative;
    padding: 4px 20px;
    margin-left: 0;
    margin-right: 0;

    &::before {
      content: '';
      color: var(--c-md-alert-note);
      position: absolute;
      top: 0;
      bottom: 0;
      left: 0;
      width: 4px;
      border-radius: 6px;
      background-color: var(--c-md-alert-note);
    }

    & p {
      color: var(--text-1-light);
      line-height: 1.6;
      margin: 0;
    }
  }

  .blockquote-title {
    display: flex;
    align-items: center;
    gap: 8px;
    font-weight: 600;
    font-size: var(--text-base);
    margin-bottom: 4px;

    &[data-alert-type="note"] {
      color: var(--c-md-alert-note);
    }

    &[data-alert-type="tip"] {
      color: var(--c-md-alert-tip);
    }

    &[data-alert-type="warning"] {
      color: var(--c-md-alert-warning);
    }

    &[data-alert-type="caution"] {
      color: var(--c-md-alert-caution);
    }

    &[data-alert-type="important"] {
      color: var(--c-md-alert-important);
    }
  }

  .blockquote-tip {
    color: var(--c-md-alert-tip);

    &::before {
      background-color: var(--c-md-alert-tip);
    }

    & code {
      color: var(--c-md-alert-tip);
      background-color: var(--c-gray-soft);
    }
  }

  .blockquote-warning {
    color: var(--c-md-alert-warning);

    &::before {
      background-color: var(--c-md-alert-warning);
    }

    & code {
      color: var(--c-md-alert-warning);
      background-color: var(--c-yellow-soft);
    }
  }

  .blockquote-caution {
    color: var(--c-md-alert-caution);

    &::before {
      background-color: var(--c-md-alert-caution);
    }

    & code {
      color: var(--c-md-alert-caution);
      background-color: var(--c-red-soft);
    }
  }

  .blockquote-important {
    color: var(--c-md-alert-important);

    &::before {
      background-color: var(--c-md-alert-important);
    }

    & code {
      color: var(--c-md-alert-important);
      background-color: var(--c-purple-soft);
    }
  }

  /* Image */
  img:not([data-no-view]) {
    position: relative;
    max-width: 100%;
    height: auto;
    cursor: zoom-in;
    object-fit: contain;
    border-radius: 12px;
    transition: border-radius 250ms;

    &:hover {
      border-radius: 0;
    }
  }

  /* Details */
  &>details {
    font-size: var(--text-sm);
    border-radius: 8px;
    background-color: var(--c-gray-soft);

    & summary {
      padding: 12px 16px;
      font-weight: 600;
      cursor: pointer;
    }

    & p {
      padding: 12px 16px;
      margin: 0;
    }
  }

  .line {
    display: block;
    min-height: 18px;
    width: 100%;
  }

  .line[data-line]::before {
    content: attr(data-line);
    display: inline-block;
    color: var(--text-2);
    min-width: 26px;
  }

  .highlight-line,
  .deleted,
  .inserted {
    box-sizing: content-box;
    padding-left: 16px;
    margin-left: -16px;
  }

  .highlight-line,
  .highlight-word {
    background-color: var(--c-indigo-soft);
  }

  .highlight-word {
    box-sizing: content-box;
    padding: 0 2px;
    border-radius: 4px;
    border: 1px solid var(--c-green-soft);
  }

  .deleted {
    background-color: var(--c-red-soft);

    &::before {
      content: "- ";
      color: var(--c-red-1);
    }
  }

  .inserted {
    background-color: var(--c-green-soft);

    &::before {
      content: "+ ";
      color: var(--c-green-1);
    }
  }

  .language-bash>.line:first-child {
    &::before {
      content: "$ ";
    }
  }

  .task-list-item {
    list-style: none;
  }

  .contains-task-list {
    padding-left: 16px;
  }
}

